fixed extra whitespace problems with a couple minor CSS edits to NavBar and Logo and CollectionList

--- a/src/components/FullLogo/Logo.css
+++ b/src/components/FullLogo/Logo.css
@@ -48,9 +48,9 @@
 
 @media screen and (max-width: 768px) {
   .logo-word-modern {
-    font-size: 24px;
+    font-size: 22px;
   }
   .logo-word-trousseau {
-    font-size: 24px;
+    font-size: 22px;
   }
 }
